<resources>
    <string name="app_name">Movie Finder</string>
    <string name="movie_poster">Movie poster</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="ok">OK</string>
    <string name="filterquery">FilterQuery</string>
    <string name="reset_filters">Reset</string>
    <string name="poster">Poster</string>
    <string name="owerview">Owerview</string>
    <string name="top_buld_cast">Top Buld Cast</string>
    <string name="details">Details</string>
    <string name="homepage">Homepage</string>
    <string name="tagline">Tagline</string>
    <string name="runtime">Runtime</string>
    <string name="cast_poster">Cast Poster</string>
    <string name="apply_filters">Apply</string>
</resources>